[gd_scene load_steps=6 format=3 uid="uid://c8cu7ia5r4ldj"]

[ext_resource type="Script" path="res://scripts/components/upgrades_component.gd" id="1_8b6hi"]
[ext_resource type="Script" path="res://scenes/upgrades_menu.gd" id="2_o5o0b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eseyo"]
bg_color = Color(0, 0, 0, 0.298039)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ux5nf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ns2bq"]
size = Vector2(224, 124)

[node name="UpgradesComponent" type="Node2D"]
script = ExtResource("1_8b6hi")

[node name="NoRotate" type="Node" parent="."]

[node name="Menu" type="Control" parent="NoRotate"]
auto_translate_mode = 1
layout_mode = 3
anchors_preset = 0
offset_right = 256.0
size_flags_horizontal = 4
mouse_filter = 1
script = ExtResource("2_o5o0b")

[node name="Panel" type="Panel" parent="NoRotate/Menu"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_eseyo")

[node name="CenterContainer" type="CenterContainer" parent="NoRotate/Menu"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NoRotate/Menu/CenterContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="Upgrades" type="Label" parent="NoRotate/Menu/CenterContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Upgrades"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="NoRotate/Menu/CenterContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
tab_alignment = 1
current_tab = 0
clip_tabs = false

[node name="Upgrade1" type="HBoxContainer" parent="NoRotate/Menu/CenterContainer/VBoxContainer/TabContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(224, 72)
layout_mode = 2
alignment = 1

[node name="VerticalList" type="VBoxContainer" parent="NoRotate/Menu/CenterContainer/VBoxContainer/TabContainer/Upgrade1"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Description" type="Label" parent="NoRotate/Menu/CenterContainer/VBoxContainer/TabContainer/Upgrade1/VerticalList"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 4
text = "Makes something better"

[node name="Cost" type="Label" parent="NoRotate/Menu/CenterContainer/VBoxContainer/TabContainer/Upgrade1/VerticalList"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 4
text = "Cost - 50 Polygons
"

[node name="Upgrade1Button" type="Button" parent="NoRotate/Menu/CenterContainer/VBoxContainer/TabContainer/Upgrade1"]
auto_translate_mode = 1
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0.564706, 1)
theme_override_colors/font_pressed_color = Color(0, 1, 0.564706, 1)
theme_override_colors/font_hover_color = Color(0, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_ux5nf")
text = "Purchase"
flat = true

[node name="Upgrade2" type="HBoxContainer" parent="NoRotate/Menu/CenterContainer/VBoxContainer/TabContainer"]
auto_translate_mode = 1
visible = false
custom_minimum_size = Vector2(224, 72)
layout_mode = 2
alignment = 1

[node name="VerticalList" type="VBoxContainer" parent="NoRotate/Menu/CenterContainer/VBoxContainer/TabContainer/Upgrade2"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Description" type="Label" parent="NoRotate/Menu/CenterContainer/VBoxContainer/TabContainer/Upgrade2/VerticalList"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 4
text = "Makes something better"

[node name="Cost" type="Label" parent="NoRotate/Menu/CenterContainer/VBoxContainer/TabContainer/Upgrade2/VerticalList"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 4
text = "Cost - 50 Polygons
"

[node name="Upgrade2Button" type="Button" parent="NoRotate/Menu/CenterContainer/VBoxContainer/TabContainer/Upgrade2"]
auto_translate_mode = 1
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0.564706, 1)
theme_override_colors/font_pressed_color = Color(0, 1, 0.564706, 1)
theme_override_colors/font_hover_color = Color(0, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_ux5nf")
text = "Purchase"
flat = true

[node name="Upgrade3" type="HBoxContainer" parent="NoRotate/Menu/CenterContainer/VBoxContainer/TabContainer"]
auto_translate_mode = 1
visible = false
custom_minimum_size = Vector2(224, 72)
layout_mode = 2
alignment = 1

[node name="VerticalList" type="VBoxContainer" parent="NoRotate/Menu/CenterContainer/VBoxContainer/TabContainer/Upgrade3"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Description" type="Label" parent="NoRotate/Menu/CenterContainer/VBoxContainer/TabContainer/Upgrade3/VerticalList"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 4
text = "Makes something better"

[node name="Cost" type="Label" parent="NoRotate/Menu/CenterContainer/VBoxContainer/TabContainer/Upgrade3/VerticalList"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 4
text = "Cost - 50 Polygons
"

[node name="Upgrade3Button" type="Button" parent="NoRotate/Menu/CenterContainer/VBoxContainer/TabContainer/Upgrade3"]
auto_translate_mode = 1
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0.564706, 1)
theme_override_colors/font_pressed_color = Color(0, 1, 0.564706, 1)
theme_override_colors/font_hover_color = Color(0, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_ux5nf")
text = "Purchase"
flat = true

[node name="PriceNotificationTimer1" type="Timer" parent="NoRotate/Menu"]
one_shot = true

[node name="PriceNotificationTimer2" type="Timer" parent="NoRotate/Menu"]
one_shot = true

[node name="PriceNotificationTimer3" type="Timer" parent="NoRotate/Menu"]
one_shot = true

[node name="ExitArea" type="Area2D" parent="NoRotate"]
position = Vector2(128, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoRotate/ExitArea"]
shape = SubResource("RectangleShape2D_ns2bq")

[connection signal="upgrade_purchased" from="NoRotate/Menu" to="." method="purchase_upgrade"]
[connection signal="pressed" from="NoRotate/Menu/CenterContainer/VBoxContainer/TabContainer/Upgrade1/Upgrade1Button" to="NoRotate/Menu" method="_on_upgrade_1_button_pressed"]
[connection signal="pressed" from="NoRotate/Menu/CenterContainer/VBoxContainer/TabContainer/Upgrade2/Upgrade2Button" to="NoRotate/Menu" method="_on_upgrade_2_button_pressed"]
[connection signal="pressed" from="NoRotate/Menu/CenterContainer/VBoxContainer/TabContainer/Upgrade3/Upgrade3Button" to="NoRotate/Menu" method="_on_upgrade_3_button_pressed"]
[connection signal="timeout" from="NoRotate/Menu/PriceNotificationTimer1" to="NoRotate/Menu" method="_on_price_notification_timer_1_timeout"]
[connection signal="timeout" from="NoRotate/Menu/PriceNotificationTimer2" to="NoRotate/Menu" method="_on_price_notification_timer_2_timeout"]
[connection signal="timeout" from="NoRotate/Menu/PriceNotificationTimer3" to="NoRotate/Menu" method="_on_price_notification_timer_3_timeout"]
[connection signal="mouse_exited" from="NoRotate/ExitArea" to="." method="_hide_menu"]
